# qml-test

./: CMakeLists.txt  imageprocessor.cpp  imageprovider.cpp  imageprovider.h  main.cpp  main.qml
